--- a/src/common.blocks/page.scss
+++ b/src/common.blocks/page.scss
@@ -2,6 +2,9 @@
 
 html, body.page {
 	height: 100%;
+width: 100%;
+margin: 0;
+padding: 0;
 	font-family: $font;
 	font-size: $baseFontSize;
 	color: $baseFontColor;
@@ -10,8 +13,12 @@ html, body.page {
 
 .page__wrapper {
 	width: 100%;
-
+min-height: 100vh;
+position: relative;
+transition: margin 0.3s ease; // Плавное смещение
 	&_locked {
-		position: fixed;
+		//position: fixed;
+		position: static;
+		margin-right: calc(-1 * (100vw - 100%)); // Компенсируем исчезновение скроллбара
 	}
 }
