--- a/src/common.blocks/modal.scss
+++ b/src/common.blocks/modal.scss
@@ -4,23 +4,14 @@
 .modal {
   @include mixins.sublayer;
   // height: max-content;
-  //position: absolute;
-  position: fixed;
-top: 0;
-left: 0;
-width: 100vw;
-height: 100vh;
-
+  position: absolute;
   display: none;
   justify-content: center;
-align-items: center;
   background-color: $overlayBackground;
   z-index: 100;
-  //padding-top: 5vh;
-  //padding-bottom: 5vh;
-padding: 20px;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
   box-sizing: border-box;
-  overflow-y: auto;
 
   &_active {
     display: flex;
@@ -29,15 +20,12 @@ padding: 20px;
   &__container {
     @include mixins.container;
     @include mixins.flex(column);
-    //gap: $defaultPadding;
+    gap: $defaultPadding;
     background-color: $background;
     // min-height: 90vmin;
     border-radius: 3rem;
-  padding: $defaultPadding;
-    //box-sizing: border-box;
+    box-sizing: border-box;
     position: relative;
-  width: 100%;
-  
   }
 
   &__content {
